--- a/index.html
+++ b/index.html
@@ -1,11 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <title>Слайдер</title>
+  </head>
+  <body>
+    <main>
+      <h1 class="page-title">Слайдер</h1>
+      <div class="container">
+        <div class="switch">
+          <input id="autoplay" name="autoplay" type="checkbox" />
+          <label for="autoplay">Автопрокрутка</label>
+        </div>
+        <div class="top">
+          <i class="arrow left">&#10094;</i>
+          <div class="frame">
+            <div class="slide">
+              <img class="image" src="large_2021.jpg" alt="Image 1" />
+              <img class="image" src="large_2025.jpg" alt="Image 2" />
+              <img class="image" src="large_202500.jpg" alt="Image 3" />
+              <img class="image" src="large_202505.jpg" alt="Image 4" />
+              <img class="image" src="large_202507.jpg" alt="Image 5" />
+            </div>
+          </div>
+          <i class="arrow right">&#10095;</i>
+        </div>
+        <div class="bottom">
+          <div class="button"></div>
+          <div class="button"></div>
+          <div class="button"></div>
+          <div class="button"></div>
+          <div class="button"></div>
+        </div>
+      </div>
+    </main>
     <script src="main.js"></script>
-</body>
+  </body>
 </html>
