--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
           <i class="arrow left fa-solid fa-chevron-left"></i>
           <div class="frame">
             <div class="slide">
-              <img src="url1.jpg" alt="Image 1" />
-              <img src="url2.jpg" alt="Image 2" />
-              <img src="url3.jpg" alt="Image 3" />
-              <img src="url4.jpg" alt="Image 4" />
-              <img src="url5.jpg" alt="Image 5" />
+              <img src="large_2021.jpg" alt="Image 1" />
+              <img src="large_2025.jpg" alt="Image 2" />
+              <img src="large_202500.jpg" alt="Image 3" />
+              <img src="large_202505.jpg" alt="Image 4" />
+              <img src="large_202507.jpg" alt="Image 5" />
             </div>
           </div>
           <i class="arrow right fa-solid fa-chevron-right"></i>
